--- a/src/app/auto-healing/autohealing.component.css
+++ b/src/app/auto-healing/autohealing.component.css
@@ -82,7 +82,7 @@
     padding: 10px;
     padding-right: 30px;
     border-radius: 10px;
-    width:70%;
+    width:90%;
 }
 
 .saveSection {
@@ -143,7 +143,7 @@ label {
 .alert-section{
     margin-top:5px;
     font-size: inherit;
-    width:70%;
+    width:90%;
     padding: 10px;
     padding-right: 30px;
     border-radius: 10px;
